--- a/game.html
+++ b/game.html
@@ -9,24 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" type="image/png" href="img/black-rock.png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="js/script.js"></script>
 </head>
 <body>
-    <div class="container container-game p-4">
-        <h2 id="round-number" class="subtitle">Round </h2>
-        <h3 class="text my-3">Choose one</h3>
+    <div class="container container-game">
+        <h2 id="round-number" class="subtitle my-3">Round </h2>
+        <h3 id="player-name" class="text my-1"></h3>
+        <h3 class="text my-1">Choose one</h3>
         <div class="images">
             <span id="player-rock" class="element element-rock"><button class="element-button"></button></span>
             <span id="player-paper" class="element element-paper"><button class="element-button"></button></span>
             <span id="player-scissors" class="element element-scissors"><button class="element-button"></button></span>
         </div>
-        <h2 id="round-status" class="subtitle my-4">VS</h2>
+        <h2 id="round-status" class="subtitle my-2">VS</h2>
+        <h3 id="opponent-name" class="text my-1"></h3>        
         <div class="images">
             <span id="cpu-rock" class="element cpu-rock"></span>
             <span id="cpu-paper" class="element cpu-paper"></span>
             <span id="cpu-scissors" class="element cpu-scissors"></span>
         </div>
+        <h3 id="opponent-probabilities" class="text my-1"></h3>
     </div>
 </body>
 </html>
