Error after login screen was fixed

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <div class="container p-5">
         <h1 class="my-5 title">Rock, Paper & Scissors</h1>
-        <form action="game.html" class="form my-5 p-5" method="post">
+        <div class="form my-5 p-5">
             <input type="text" id="name" class="validate my-3" placeholder="Your name" autocomplete="off" required>
-            <input type="submit" class="boton btn my-3" value="Play">
-        </form>
+            <a href="game.html" id="play-button" class="boton btn my-3">Play</a>
+        </div>
     </div>
 </body>
 </html>
